--- a/app/views/public_relations/index.html.erb
+++ b/app/views/public_relations/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing Public Relations</h1>
 
-<%= link_to 'New PR Entry', new_public_relation_path %>
+<%= link_to 'New PR Entry', new_public_relation_path, class:"btn btn-default" %>
 <%= render 'layouts/country_pr_menu' %>
 
 <h2>Total PR Changes</h2>
