--- a/app/views/layouts/_country_pr_menu.html.erb
+++ b/app/views/layouts/_country_pr_menu.html.erb
@@ -1,7 +1,12 @@
-<h2>PR by Country</h2>
-<div class="btn-group" role="group">
-  <p>PR by Country</p>
-  <% @countries.each do |country|%>
-  <%= link_to country, country_pr_status_path(country), class: "btn btn-default" %>
-  <% end %>
+<div class="well-sml panel panel-default">
+  <div class="panel-heading">
+    <div class="panel-title">PR by Country</div>
+  </div>
+  <div class="panel-body">
+   <div class="btn-group" role="group">
+      <% @countries.each do |country|%>
+      <%= link_to country, country_pr_status_path(country), class: "btn btn-default" %>
+      <% end %>
+    </div>
+  </div>
 </div>
