--- a/app/views/layouts/_country_pr_menu.html.erb
+++ b/app/views/layouts/_country_pr_menu.html.erb
@@ -1,4 +1,4 @@
-<div class="well-sml panel panel-default">
+<div class="well-sml panel panel-success">
   <div class="panel-heading">
     <div class="panel-title">PR by Country</div>
   </div>
