--- a/app/views/layouts/_public_relations_listing.html.erb
+++ b/app/views/layouts/_public_relations_listing.html.erb
@@ -3,7 +3,7 @@
     <h2 class="panel-title">Total PR Changes</h2>
   </div>
   <div class="panel-body">
-<table class="table">
+<table class="table table-striped">
   <thead>
     <tr>
       <th >Round</th>
