--- a/app/views/public_relations/index.html.erb
+++ b/app/views/public_relations/index.html.erb
@@ -4,7 +4,7 @@
 <%= render 'layouts/country_pr_menu' %>
 
 <h2>Total PR Changes</h2>
-<table class="table">
+<table class="table table-striped">
   <thead>
     <tr>
       <th >Round</th>
