--- a/app/views/games/human_control.html.erb
+++ b/app/views/games/human_control.html.erb
@@ -3,6 +3,7 @@
 <div class="row  panel panel-default">
   <div class="col-md-6">
     <h2>PR Changes for Round: <%= @last_round %></h2>
+    <p><em>PR effects collected on turn 1 will be distributed to teams halfway through turn 2, the credits then usable in turn 3.</em></p>
     <table class="table">
       <thead>
         <tr>
@@ -24,6 +25,28 @@
   </div>
   <div class="col-md-6">
     <%= render 'layouts/country_pr_menu' %>
+    <table class="table-condensed table-bordered">
+      <tr>
+        <th>Total Modifier</th>
+        <th>Income Change</th>
+      </tr>
+      <tr>
+        <td> >= 4</td>
+        <td>+1 </td>
+      </tr>
+      <tr>
+        <td> 0..3 </td>
+        <td>0</td>
+      </tr>
+      <tr>
+        <td>-1..-3</td>
+        <td>-1</td>
+      </tr>
+      <tr>
+        <td> <= -4</td>
+        <td>-2</td>
+      </tr>
+    </table>
   </div>
 </div>
 
