Updated paper with fonts and removed bullets

--- a/app/assets/stylesheets/news_messages.css.scss
+++ b/app/assets/stylesheets/news_messages.css.scss
@@ -5,3 +5,21 @@
 h2 {
   color: black;
 }
+
+.DEN{
+  font-family: "Comic Sans MS";
+  color: black;
+  font-size:16px;
+}
+
+.GNN{
+  font-family: "Arial";
+  color: black;
+  font-size:16px;
+}
+
+.SFT{
+  font-family: "Times New Roman";
+  color: black; 
+  font-size:16px;
+}
