--- a/app/views/public_relations/country_status.html.erb
+++ b/app/views/public_relations/country_status.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @country %> PR View</h1>
+<p style="font-size:18px">Current Round is <%= @roundNum %>.  Total PR for Round <%= @roundNum -2 %> is: <%= @roundTotal %></p>
 
 <h3> PR Amounts by Round </h3>
 <table class="table">
@@ -19,9 +20,6 @@
     <% end %>
   </tbody>
 </table>
-
-<h4>Current Round is <%= @roundNum %>.  Total is: <%= @roundTotal %></h4>
-
 
 <%= render 'layouts/country_pr_menu' %>
 </br>
