--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -157,7 +157,13 @@ p {
     background: $background-green;
     margin: 40px -40px -20px 80px;
     padding: 20px 20px 50px 20px;
-    font-size: 16px;
+    font-size: 34px;
+    color: red;
+    h3{
+      font-size: 34px;
+      margin-bottom:5px;
+      color: red;
+    }
   }
 
 }
@@ -214,8 +220,16 @@ p {
     font-size:16px;
     text-align: center;
 
+    p{
+      font-size:34px;
+    }
+
     .activity-container {
       margin-top: 50px;
+      p{
+        margin-top:5px;
+        font-size: 34px;
+      }
     }
 
     .activity-image {
