--- a/app/views/games/dashboard.html.erb
+++ b/app/views/games/dashboard.html.erb
@@ -68,12 +68,12 @@
 
       <div class="rioters-container">
         <h3>Rioters</h3>
-        {{rioters}}
+        <p>{{rioters}}</p>
 
         <div class="activity-container">
           <img class="activity-image" src="/assets/activity.png" />
-          <h3>Activity</h3>
-          {{activity}}
+          <h3>Military Activity</h3>
+            <p>{{activity}}</p>
         </div>
       </div>
     </div>
