Change internal messaging

--- a/app/views/news_messages/index.html.erb
+++ b/app/views/news_messages/index.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div class="panel-body">
     <div class="btn-group" role="group">
-      TMP: Need to fix
+      Posts directly to twitter (be careful when using this).
       <%= form_tag direct_twitter_post_path, :method => 'post' do %>
       <%= text_field_tag :text, '', size: 50, :placeholder => "ex. Held World Trade Conference" %>
         <%= submit_tag "Post" %>
