--- a/app/views/games/dashboard.html.erb
+++ b/app/views/games/dashboard.html.erb
@@ -53,7 +53,7 @@
         <h4>{{news_item.title}}</h4>
           <p>{{news_item.content}}</p>
           <img ng-show="{{news_item.media_url.length>0}}" ng-src="{{news_item.media_url}}" 
-            style="max-width: 500px; max-height:500px" />
+            style="max-height:100px" />
           <p class="news">{{news_item.created_at| date:'h:mma'}}</p>
       </div>
       <div class="news-container" ng-if="news.length==0">
