--- a/app/assets/stylesheets/news_messages.css.scss
+++ b/app/assets/stylesheets/news_messages.css.scss
@@ -6,6 +6,12 @@ h2 {
   color: black;
 }
 
+  .paper{
+    img{
+    max-height:300px;
+    max-width: 75%;
+    }
+  }
 .DEN{
   font-family: "Comic Sans MS";
   color: black;
