--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -1,2 +1,2 @@
 /* @font-face kit by Fonts2u (http://www.fonts2u.com) */
- @font-face {font-family:"Vorlon";src:url("VORLON.eot?") format("eot"),url("VORLON.woff") format("woff"),url("VORLON.ttf") format("truetype"),url("VORLON.svg#Vorlon") format("svg");font-weight:normal;font-style:normal;}
+ @font-face {font-family:"Vorlon";src:font-url("VORLON.eot?") format("eot"),font-url("VORLON.woff") format("woff"),font-url("VORLON.ttf") format("truetype"),font-url("VORLON.svg#Vorlon") format("svg");font-weight:normal;font-style:normal;}
