More vorlon fixes

--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -1,2 +1,2 @@
 /* @font-face kit by Fonts2u (http://www.fonts2u.com) */
- @font-face {font-family:"Vorlon";src:font-url("VORLON.eot?") format("eot"),font-url("VORLON.woff") format("woff"),font-url("VORLON.ttf") format("truetype"),font-url("VORLON.svg#Vorlon") format("svg");font-weight:normal;font-style:normal;}
+ @font-face {font-family:"Vorlon";src:font-url("VORLON-4175c23328b1d392a1f7ac0c6beadaff.eot?") format("eot"),font-url("VORLON-a9a83c1d69b65a5ddb3739d845e99021.woff") format("woff"),font-url("VORLON-3d0634bf40c44981c0f158082e4e6b1d.ttf") format("truetype"),font-url("VORLON-b26ce29d7268b5d684e9499de46c86ed.svg#Vorlon") format("svg");font-weight:normal;font-style:normal;}
