--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,4 +1,4 @@
-<h2 style="color:red">Do not touch if you are not Kevin</h2>
+<h2 style="color:red">Currently disabled.</h2>
 <%= link_to import_tweets_path, method: :post, class: "btn btn-default" do %>
   Import Tweets
     <% end %>
