--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -47,7 +47,7 @@ th {
 // Default Page
 */
 
-body {
+body.wts-dash {
   background: $background;
   color: black;
   font-size: 1.8rem;
@@ -97,16 +97,11 @@ p {
   }
 }
 
-
-
 .columns {
   display: table;
   position: relative;
   width: 100%;
 }
-
-
-
 
 .left-column {
   display: table-cell;
@@ -117,6 +112,12 @@ p {
   .mgs-logo {
     display: block;
     margin: 30px auto 50px;
+  }
+
+  .twitter {
+    font-size: 10px;
+    margin-top: -18px;
+    margin-left: 20px;
   }
 
   .countries-container {
@@ -148,10 +149,6 @@ p {
       .up   { background-position: 5px   7px; }
       .down { background-position: 5px -17px; }
     }
-
-
-
-
   }
 
   .terror-container {
@@ -234,13 +231,13 @@ p {
     font-size:16px;
     text-align: center;
 
-    p{
+    p {
       font-size:25px;
     }
 
     .activity-container {
       margin-top: 50px;
-      p{
+      p {
         margin-top:5px;
         font-size: 25px;
       }
