--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>WatchTheSkiesDashboard</title>
-  <%= stylesheet_link_tag    'application', media: 'all'%>
-  <%= javascript_include_tag 'application'%>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  <head>
+    <title>WatchTheSkiesDashboard</title>
+    <%= stylesheet_link_tag    'application', media: 'all'%>
+    <%= javascript_include_tag 'application'%>
+    <%= csrf_meta_tags %>
+  </head>
+  <body class="wts-dash">
+    <%= render "layouts/footer_navbar" %>
 
-  <div class="adminControl">
-<%= render "layouts/footer_navbar" %>
-<% unless current_page?('/')%>
-  <div class="adminControl">
-  <%= yield %>
-  </div>
-<% else %>
-  <%= yield %>
-<% end %>
-</body>
+    <% unless current_page?('/')%>
+      <div class="adminControl">
+        <%= yield %>
+      </div>
+    <% else %>
+      <%= yield %>
+    <% end %>
+  </body>
 </html>
-
