Start working on converting rioters count to icons.

--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -243,6 +243,16 @@ p {
       }
     }
 
+    .rioters-count {
+      margin: 20px auto;
+      text-align: left;
+      width: 75%;
+
+      img {
+        margin: 3px 0px;
+      }
+    }
+
     .activity-image {
       display: block;
       margin: 0 auto;
