--- a/app/views/games/admin.html.erb
+++ b/app/views/games/admin.html.erb
@@ -11,7 +11,7 @@
 
 <h2>Pause/Unpause Game:
 <%= link_to toggle_game_status_path, method: :post, class: "btn btn-default" do %>
-  <% if @game.data['paused'] %>
+  <% if @game.data['paused']==true %>
     <i class="glyphicon glyphicon-play"></i>
   <% else %>
     <i class="glyphicon glyphicon-pause"></i>
@@ -30,7 +30,7 @@
 <h2>Set Next Time</h2>
 <p>Current time is: <%= @time %></p>
 <%= form_for(@game, url: update_time_path(@game)) do |f|%>
-  <%= Time.use_zone("Eastern Time (US & Canada)") do %>
+  <%= Time.use_zone(@time_zone) do %>
   <%= f.datetime_select(:next_round, :ampm => true) %>
   <% end %>
 
